assignment... please do it

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <span>
       <h2>Enter a list item:</h2>
       <input type="text" />
-      <button>Enter</button>
+      <button class="submitButton">Enter</button>
     </span>
     <ul>
       <li>Apples</li>
@@ -20,5 +20,6 @@
       <li>Grapes</li>
       <li>Limes</li>
     </ul>
+    <script src="app.js" />
   </body>
 </html>
